# markdown-to-html-translator

./: build.sh
docs/: README.md  ToDO.md
src/: .gitignore  CMakeLists.txt  argument_parser.hpp  error_handler.hpp  main.cpp  node.hpp  token.hpp
src/building/: builder_interface.hpp  css_constructor.hpp  html_constructor.hpp  html_visitor.hpp
src/parsing/: emitting_middleware.hpp  markdown_parser.hpp  parser_interface.hpp  parsing_helpers.hpp  state.hpp  state_handlers.hpp
src/parsing_tree/: tree_builder.hpp
test_files/: C_class_doc.md  ai_created_example.md  complex_example.md  complex_table.md  test_file.md
test_output/: README.html  styles.css
